[package]
name = "http_benchmark_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "=1.0.203", features = ["derive"] }
env_logger = "0.9"
config = "0.14.1"
clap = { version = "4.3.10", features = ["derive"] }
reqwest = "0.12.9"
ftlog = "0.2.14"
anyhow = "1.0"
once_cell = "1.20.2"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
openssl = {version = "0.10.62", features = ["vendored"]}
chrono = "0.4.39"
